# aleph-alpha-client

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  API_Docs.md  Changelog.md  Checkpoints.md  Contributing.md  LICENSE  README.md  pyproject.toml  readme.ipynb  release-please-config.json  requirements-dev.txt  requirements.txt  setup.py  structured_output.py  test.py
.github/: dependabot.yml
.github/workflows/: integration.yml  on-push.yml  python-publish.yml  release-please.yml
AlephAlphaClient/: __init__.py  aleph_alpha_client.py
aleph_alpha_client/: __init__.py  aleph_alpha_client.py  aleph_alpha_model.py  chat.py  completion.py  detokenization.py  document.py  embedding.py  evaluation.py  explanation.py  image.py  prompt.py  prompt_item.py  prompt_template.py  qa.py  queue.py  reranking.py  search.py  steering.py  structured_output.py  summarization.py  tokenization.py  translate.py  translation.py  utils.py  version.py
docs/source/: aleph_alpha_client.rst  conf.py  index.rst  modules.rst
tests/: common.py  conftest.py  sample.docx  test_404.py  test_async_client.py  test_chat.py  test_clients.py  test_complete.py  test_detokenize.py  test_embed.py  test_error_handling.py  test_errors.py  test_evaluate.py  test_explanation.py  test_image.py  test_prompt.py  test_prompt_template.py  test_qa.py  test_rerank.py  test_search.py  test_steering.py  test_summarize.py  test_tasks.py  test_tokenize.py  test_translate.py  test_wildcard_import.py
tests/cassettes/test_chat/: test_can_chat_with_async_client.yaml  test_can_chat_with_chat_model.yaml  test_can_chat_with_images[async_client].yaml  test_can_chat_with_images[sync_client].yaml  test_can_chat_with_streaming_support.yaml  test_can_chat_with_tools.yaml  test_can_chat_with_tools_streamed.yaml  test_can_not_chat_with_all_models.yaml  test_multi_turn_chat_serialization.yaml  test_response_format_json_schema.yaml  test_response_format_json_schema_pydantic.yaml  test_steering_chat.yaml  test_stream_options.yaml
tests/cassettes/test_clients/: test_available_models_async_client.yaml
tests/cassettes/test_complete/: test_can_complete_with_async_client.yaml  test_can_use_streaming_support_with_async_client.yaml  test_complete.yaml  test_complete_maximum_tokens_none.yaml  test_complete_with_echo.yaml  test_complete_with_optimized_prompt.yaml  test_complete_with_token_ids.yaml  test_num_tokens_generated_with_best_of.yaml  test_num_tokens_prompt_total_with_best_of.yaml
tests/cassettes/test_detokenize/: test_can_detokenization_with_async_client.yaml  test_detokenize.yaml
tests/cassettes/test_embed/: test_batch_embed_semantic[100].yaml  test_batch_embed_semantic[101].yaml  test_batch_embed_semantic[1].yaml  test_batch_embed_semantic[200].yaml  test_batch_embed_semantic_with_async_client[1-100].yaml  test_batch_embed_semantic_with_async_client[1-101].yaml  test_batch_embed_semantic_with_async_client[1-1].yaml  test_batch_embed_semantic_with_async_client[100-100].yaml  test_batch_embed_semantic_with_async_client[100-101].yaml  test_batch_embed_semantic_with_async_client[100-1].yaml  test_batch_embed_semantic_with_async_client[32-100].yaml  test_batch_embed_semantic_with_async_client[32-101].yaml  test_batch_embed_semantic_with_async_client[32-1].yaml  test_can_embed_with_async_client.yaml  test_can_instructable_embed_with_async_client.yaml  test_can_semantic_embed_with_async_client.yaml  test_embed.yaml  test_embed_instructable.yaml  test_embed_semantic.yaml  test_embed_with_tokens.yaml  test_embedding_of_one_token_aggregates_identically.yaml
tests/cassettes/test_evaluate/: test_can_evaluate_with_async_client.yaml  test_evaluate.yaml
tests/cassettes/test_explanation/: test_can_explain_with_async_client.yaml  test_explanation_auto_granularity.yaml  test_explanation_of_image_in_pixels.yaml  test_explanation_with_multimodal_prompt.yaml  test_explanation_with_text_from_request.yaml  test_explanation_with_text_only.yaml  test_explanation_with_token_granularities_oom_regression.yaml
tests/cassettes/test_prompt/: test_image_controls_with_cats_and_dogs.yaml
tests/cassettes/test_rerank/: test_can_rerank_documents[async_client].yaml  test_can_rerank_documents[sync_client].yaml  test_can_rerank_with_top_n[async_client].yaml  test_can_rerank_with_top_n[sync_client].yaml  test_rerank_returns_results_ordered_by_relevance[async_client].yaml  test_rerank_returns_results_ordered_by_relevance[sync_client].yaml
tests/cassettes/test_tokenize/: test_can_tokenize_with_async_client.yaml  test_tokenize.yaml
tests/cassettes/test_translate/: test_can_translate_multiple_requests_concurrently_with_async_client.yaml  test_can_translate_single_request[async_client].yaml  test_can_translate_single_request[sync_client].yaml
tests/testcases/: test_404.py  test_errors.py  test_health.py  test_tasks.py
