[tool.poetry]
name = "aleph-alpha-client"
version = "10.0.0"
description = "python client to interact with Aleph Alpha api endpoints"
authors = ["Aleph Alpha <support@aleph-alpha.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Aleph-Alpha/aleph-alpha-client"
packages = [{ include = "aleph_alpha_client" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = ">=2.28"
urllib3 = ">=1.26"
aiohttp = ">=3.10.2"
aiodns = ">=3.2.0"
aiohttp-retry = ">=2.8.3"
tokenizers = ">=0.13.2"
typing-extensions = ">=4.5.0"
Pillow = ">=9.2.0"
tqdm = ">=4.62.0"
python-liquid = ">=1.9.4"
packaging = ">=23.2"
sphinx = { version = ">=6.1.3", optional = true }
sphinx-rtd-theme = { version = ">=1.2.1", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-dotenv = "^0.5.2"
pytest-httpserver = "^1.1.1"
pytest-aiohttp = "^1.1.0"
mypy = "^1.15.0"
pre-commit = "^4.1.0"
ruff = "^0.9.7"
types-requests = "^2.32.0.20241016"
types-pillow = "^10.2.0.20240822"
types-tqdm = "^4.67.0.20241221"
nbconvert = "^7.16.6"
ipykernel = "^6.29.5"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme"]


[tool.pytest.ini_options]
markers = [
    "system_test: Marks a test that runs as a system test of AlephAlpha API",
]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
