[project]
name = "aleph-alpha-client"
version = "10.5.1"
description = "python client to interact with Aleph Alpha api endpoints"
authors = [{ name = "Aleph Alpha", email = "support@aleph-alpha.com" }]
requires-python = ">=3.9,<3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "requests>=2.28",
    "urllib3>=1.26",
    "aiohttp>=3.10.2",
    "aiodns>=3.2.0",
    "aiohttp-retry>=2.8.3",
    "tokenizers>=0.13.2",
    "typing-extensions>=4.5.0",
    "Pillow>=9.2.0",
    "tqdm>=4.62.0",
    "python-liquid>=1.9.4",
    "packaging>=23.2",
]

[project.urls]
Homepage = "https://github.com/Aleph-Alpha/aleph-alpha-client"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "pytest-cov>=6.0.0,<7",
    "pytest-dotenv>=0.5.2,<0.6",
    "pytest-httpserver>=1.1.1,<2",
    "pytest-aiohttp>=1.1.0,<2",
    "mypy>=1.15.0,<2",
    "pre-commit>=4.1.0,<5",
    "ruff>=0.9.7,<0.12.0",
    "types-requests>=2.32.0.20241016,<3",
    "types-pillow>=10.2.0.20240822,<11",
    "types-tqdm>=4.67.0.20241221,<5",
    "nbconvert>=7.16.6,<8",
    "ipykernel>=6.29.5,<7",
]
docs = ["sphinx>=6.1.3", "sphinx-rtd-theme>=1.2.1"]

[tool.hatch.build.targets.sdist]
include = ["aleph_alpha_client"]

[tool.hatch.build.targets.wheel]
include = ["aleph_alpha_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
